[gd_scene load_steps=6 format=3 uid="uid://qr84kyvdphhm"]

[ext_resource type="Script" path="res://scenes/bullets/bullet.gd" id="1_td2ql"]
[ext_resource type="Texture2D" uid="uid://dtcijxbdbucg3" path="res://art/bullet.png" id="2_x38ma"]
[ext_resource type="PackedScene" uid="uid://id5m4sbumfxt" path="res://flocking_package/scenes/flock_sprite.tscn" id="3_4vhm1"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_mwfrv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vjgve"]

[node name="FlameBullet" type="RigidBody2D" groups=["bullets"]]
collision_layer = 4
collision_mask = 2
physics_material_override = SubResource("PhysicsMaterial_mwfrv")
max_contacts_reported = 10
contact_monitor = true
script = ExtResource("1_td2ql")
is_flame = true
health = 3

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.992157, 0.537255, 0.113725, 1)
position = Vector2(-3.8147e-06, -1)
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_x38ma")

[node name="FlockSprite" parent="." instance=ExtResource("3_4vhm1")]
modulate = Color(0.992157, 0.537255, 0.113725, 1)
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_x38ma")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_vjgve")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
