[gd_scene load_steps=5 format=3 uid="uid://fvslqcv4ohqw"]

[ext_resource type="Script" path="res://scenes/bullets/bullet.gd" id="1_ag3ht"]
[ext_resource type="Texture2D" uid="uid://dtcijxbdbucg3" path="res://art/bullet.png" id="2_qyx6c"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_mwfrv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vjgve"]

[node name="Love" type="RigidBody2D" groups=["bullets"]]
collision_layer = 4
collision_mask = 2
physics_material_override = SubResource("PhysicsMaterial_mwfrv")
max_contacts_reported = 10
contact_monitor = true
script = ExtResource("1_ag3ht")
is_love = true

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.215686, 1, 1, 1)
position = Vector2(-3.8147e-06, -1)
scale = Vector2(0.1875, 0.1875)
texture = ExtResource("2_qyx6c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_vjgve")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
modulate = Color(0.337255, 1, 0.913725, 1)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
